--- a/sub_html/news.html
+++ b/sub_html/news.html
@@ -279,19 +279,19 @@
                     </tr>
                     <tr class="notice">
                         <td><span>공지</span></td>
-                        <td>-</td>
-                        <td><a href="#">(6.14.~7.4.) 사회적 거리두기 2단계 기간 연장 안내</a></td>
-                        <td>감염병 관리과</td>
-                        <td>2021-06-13</td>
-                        <td>521</td>
+                        <td>경제</td>
+                        <td><a href="#">소상공인 버팀목자금 플러스 지원안내</a></td>
+                        <td>소상공인정책과</td>
+                        <td>2021-04-01</td>
+                        <td>422</td>
                     </tr>
                     <tr class="notice">
                         <td><span>공지</span></td>
                         <td>행정</td>
-                        <td><a href="">｢2021. 하계 대학생 아르바이트｣ 참여자 모집안내</a></td>
-                        <td>지역행정과</td>
-                        <td>2021-06-08</td>
-                        <td>16954</td>
+                        <td><a href="">신도시 등 공직자 투기 의혹 공익제보 접수 안내</a></td>
+                        <td>감사관</td>
+                        <td>2021-03-15</td>
+                        <td>623</td>
                     </tr>
                     <tr class="new">
                         <td><span>NEW</span></td>
@@ -315,15 +315,15 @@
                         <td><a href="#">송도,남동공단 스마트 모빌리티 시민참여단 3기 모집</a></td>
                         <td>지역행정과</td>
                         <td>2021-06-14</td>
-                        <td>46</td>
+                        <td>52</td>
                     </tr>
                     <tr class="new">
                         <td><span>NEW</span></td>
-                        <td>문화/관광</td>
-                        <td><a href="#">2021 풍류 온(溫, On) 전통문화예술한마당 공연 안내</a></td>
+                        <td>행정</td>
+                        <td><a href="#">[지역균형뉴딜 우수사업 공모 국민투표] 인천광역시 "디지털트윈, 상상을 현실로 만들다!"</a></td>
                         <td>문화유산과</td>
                         <td>2021-06-14</td>
-                        <td>19</td>
+                        <td>23</td>
                     </tr>
                     <tr>
                         <td>7888</td>
@@ -343,19 +343,19 @@
                     </tr>
                     <tr>
                         <td>7886</td>
-                        <td>문화/관광</td>
-                        <td><a href="#">「한강하구 랜선 사진 콘서트」 행사 개최 안내</a></td>
-                        <td>남북협력담당관</td>
-                        <td>2021-06-11</td>
-                        <td>803</td>
+                        <td>교통</td>
+                        <td><a href="#">송도,남동산단 스마트 모빌리티 시민참여단 3기 모집</a></td>
+                        <td>스마트도시담당관</td>
+                        <td>2021-06-10</td>
+                        <td>1286</td>
                     </tr>
                     <tr>
                         <td>7885</td>
-                        <td>행정</td>
-                        <td><a href="#">시 주간행사계획(2021.06.14~06.20)</a></td>
-                        <td>총무과</td>
-                        <td>2021-06-11</td>
-                        <td>233</td>
+                        <td>환경</td>
+                        <td><a href="#">자원순환시설(소각) 안전성에 관한 전문가 토론회 개최</a></td>
+                        <td>자연순환과</td>
+                        <td>2021-06-09</td>
+                        <td>436</td>
                     </tr>
                 </table>
                 <!-- pagination -->
